...

   Text("Current time is $time")
}

@Composable
fun NavigationButtons(navigator: Navigator) {
   Button(onClick = { navigator.navigateTo(SlideAnimationScreenKey("Hello")) }) {
      Text("Screen with custom animation with \"Hello\" Argument")
   }

   Button(onClick = { navigator.navigateTo(SlideAnimationScreenKey("World")) }) {
      Text("Screen with custom animation with \"World\" Argument")
   }

   Button(onClick = { navigator.navigateTo(TabScreenKey()) }) {
      Text("Tabs")
   }
...
