...
   override fun Content(key: SlideAnimationScreenKey) {
      Column(verticalArrangement = Arrangement.spacedBy(16.dp)) {
         Text("Received argument \"${key.argument}\"")
         Text("Animations of this screen are overriden in MainScreenKey.")

         Button(onClick = { viewModel.goBack() }) {
            Text("Go back (called through ViewModel)")
         }
      }
   }
}

